<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_library"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/my_books" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_books_filled"
            android:title="@string/remote_library" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>
    <item android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"/>
</menu>
