<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation"
    app:startDestination="@+id/nav_my_library">

    <fragment
        android:id="@+id/nav_my_library"
        android:name="com.ciastek.library.user.view.MyLibraryFragment"
        android:label="@string/my_books"
        tools:layout="@layout/fragment_my_library">
    </fragment>

    <fragment
        android:id="@+id/nav_library"
        android:name="com.ciastek.library.remote.RemoteLibraryFragment"
        android:label="@string/remote_library"
        tools:layout="@layout/fragment_remote_library">
        <action
            android:id="@+id/action_remote_library_fragment_to_book_details_activity"
            app:destination="@+id/book_details_activity" />
        <action
            android:id="@+id/action_remote_library_fragment_to_author_details_fragment"
            app:destination="@+id/author_details_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ciastek.library.newlayout.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

    <activity
        android:id="@+id/book_details_activity"
        android:name="com.ciastek.library.remote.books.details.view.BookDetailsActivity"
        android:label="@string/book_details"
        tools:layout="@layout/activity_book_details" />

    <fragment
        android:id="@+id/author_details_fragment"
        android:name="com.ciastek.library.remote.authors.details.view.AuthorDetailsFragment"
        android:label="@string/author_details"
        tools:layout="@layout/author_details_fragment" />
</navigation>