<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".remote.books.add.NewBookFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/book_title_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/basic_margin"
        android:layout_marginTop="@dimen/basic_margin"
        android:layout_marginStart="@dimen/basic_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/book_title_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/author_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_margin"
        android:layout_marginEnd="@dimen/basic_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/book_description_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/basic_margin"
        android:layout_marginTop="@dimen/basic_margin"
        android:layout_marginStart="@dimen/basic_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_spinner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/book_description_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/book_author_label"
        android:layout_marginStart="@dimen/basic_margin"
        android:layout_marginTop="@dimen/basic_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_title_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/book_cover_url_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_margin"
        android:layout_marginTop="@dimen/basic_margin"
        android:layout_marginEnd="@dimen/basic_margin"
        app:layout_constraintEnd_toStartOf="@+id/book_cover_thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_description_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_cover_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/book_cover_url_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/book_cover_thumbnail"
        android:layout_width="@dimen/thumbnail_size"
        android:layout_height="@dimen/thumbnail_size"
        android:src="@drawable/cover_placeholder"
        android:layout_marginEnd="@dimen/basic_margin"
        app:layout_constraintBottom_toBottomOf="@+id/book_cover_url_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/book_cover_url_layout" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>